--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-.ad {
+body {
     font-family: 'Roboto', sans-serif;
+}
+
+.top {
+    width: 100%;
+    height: 80vh;
+    background: url(donation13.jpg);
+    background-size: cover;
+    margin: 0;
+}
+
+.header {
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+    font-size: 2em;
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+.description {
+    padding-left: 200px;
+    padding-right: 200px;
+    font-size: 18px;
+}
+
+.button {
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(tomato, rgb(255, 0, 55));
+    font-size: 17px;
+    padding: 12px;
+    border-radius: 5px;
 }
