--- a/style.css
+++ b/style.css
@@ -75,25 +75,30 @@ body {
 
 .food {
     margin: 10px;
-    background-color: rgb(205, 227, 246);
+    background-color: rgb(230, 239, 247);
     padding: 30px 15px 30px 15px;
     margin-right: 10px;
     font-weight: 100;
     border-radius: 5px;
+    width: 40%;
+
 }
 
 .shelter {
     margin: 10px;
-    background-color: rgb(244, 151, 151);
+    background-color: rgb(245, 225, 225);
     padding: 30px 15px 30px 15px;
     margin-right: 10px;
     border-radius: 5px;
+    width: 40%;
+
 }
 
 .education {
     margin: 10px;
     background-color: blanchedalmond;
     padding: 30px 15px 30px 15px;
-    margin-right: 10px;
+    width: 40%;
     border-radius: 5px;
+
 }
